<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@drawable/rounded_corner_whitegradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_check_out">

    <ListView
        android:id="@+id/orderSummaryListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalRelativeLayout"
        android:divider="@android:color/transparent" />

    <RelativeLayout
        android:id="@+id/totalRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@id/deliverInfoLinearLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:text="@string/Total"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/qtyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:textStyle="bold"
            android:text="Rs 225" />


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/deliverInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deliveryAddressLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/Delivery_Address" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/deliveryAddressTextInputlayout"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_round_border">

            <android.support.design.widget.TextInputEditText
                android:layout_width="290dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/textColor"
                android:ems="100" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/landmarkLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/Landmark" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/landMarkTextInputLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_round_border">

            <android.support.design.widget.TextInputEditText
                android:layout_width="290dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@color/textColor" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/button_rounded_corner_bluegradient"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/placeOrderButton"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rounded_corner_bluegradient"
                android:text="@string/place_order"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>


